2019-08-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-cache-create.c: Workaround Dell
	Poweredge FC830 issue, where the last SDR entry returns errors
	when being read.  Since it's the last entry, we assume there is a
	bug in the motherboard's implementation.  Just forget about the
	last entry and move on.

2019-08-15 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.c: Workaround QuantaPlex
	T42D-2U issue, where an event only record states that it is a
	threshold sensor and a "other units based sensor", but does not
	provide any units.

2019-04-09 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api: Fix invalid error code return.

2019-02-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret: Support interpretation of power unit +
	transition severity sensors / events, power unit + state sensors /
	events.

	* libfreeipmi/interpret: Support intepretation of system firmware
	progress + device present sensors / events, system firmware
	progress + state sensors / events.

	* libfreeipmi/interpret: Support intepretation of management subsystem
	health + transition severity sensors / events, management subsystem
	health + device present sensors / events.

	* libfreeipmi/interpret: Support intepretation of system event +
	transition severity sensors / events

2019-02-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret: Support interpretation of drive slot +
	transition severity sensors / events.

2019-01-31 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api: Fix workaround for out of order packets with
	lan / rmcpplus ipmb to handle raw packets and packets with errors.

2019-01-23 Albert Chu <chu11@llnl.gov>

	* Document that "opensesspriv" workaround works on Dell C5220.

2019-01-17 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api: Add workaround for out of order packets with
	lan / rmcpplus ipmb.

2018-09-14 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Intel S2600WP product id.
