@@ -428,12 +428,20 @@ _read_fru_data (ipmi_fru_ctx_t ctx,
           /* if first time we've read from this device id, assume the
            * below completion codes mean that there is no data on this
            * device.
+           *
+           * Workaround: Fujitsu Primergy RX1330
+           *
+           * IPMI_COMP_CODE_COMMAND_RESPONSE_COULD_NOT_BE_PROVIDED
+           * appears to be the motherboards "not available" error
+           * code.
            */
           if (!num_bytes_read
               && ((ipmi_ctx_errnum (ctx->ipmi_ctx) == IPMI_ERR_COMMAND_INVALID_OR_UNSUPPORTED
                    && ipmi_check_completion_code (fru_read_data_rs, IPMI_COMP_CODE_INVALID_DATA_FIELD_IN_REQUEST) == 1)
                   || (ipmi_ctx_errnum (ctx->ipmi_ctx) == IPMI_ERR_MESSAGE_TIMEOUT
-                      && ipmi_check_completion_code (fru_read_data_rs, IPMI_COMP_CODE_COMMAND_TIMEOUT) == 1)))
+                      && ipmi_check_completion_code (fru_read_data_rs, IPMI_COMP_CODE_COMMAND_TIMEOUT) == 1)
+                  || (ipmi_ctx_errnum (ctx->ipmi_ctx) == IPMI_ERR_BAD_COMPLETION_CODE
+                      && ipmi_check_completion_code (fru_read_data_rs, IPMI_COMP_CODE_COMMAND_RESPONSE_COULD_NOT_BE_PROVIDED) == 1)))
             {
               FRU_SET_ERRNUM (ctx, IPMI_FRU_ERR_NO_FRU_INFORMATION);
               goto cleanup;
