@@ -1,3 +1,8 @@
+2019-11-18 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/fru/ipmi-fru.c: Workaround unexpected completion
+	code indicating no FRU data available.
+
 2019-08-16 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/sdr/ipmi-sdr-cache-create.c: Workaround Dell
